<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_1_normal"
        android:title="@string/top_today" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_all_normal"
        android:title="@string/top_all" />

    <item
        android:id="@+id/navigation_wish"
        android:icon="@drawable/ic_share"
        android:title="@string/top_wish" />
    <item
        android:id="@+id/navigation_note"
        android:icon="@drawable/note"
        android:title="@string/top_note"/>
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_more_normal"
        android:title="@string/top_mine" />

</menu>
